install(FILES neon-signing-key.gpg DESTINATION ${DATA_INSTALL_DIR}/isoimagewriter/)
install(FILES arch-signing-key.gpg DESTINATION ${DATA_INSTALL_DIR}/isoimagewriter/)
install(FILES ubuntu-signing-key.gpg DESTINATION ${DATA_INSTALL_DIR}/isoimagewriter/)

install(FILES neon-signing-key.gpg DESTINATION ${DATA_INSTALL_DIR}/testy/)
